/*******************************************************************************
 * This file is part of OpenNMS(R).
 *
 * Copyright (C) 2022 The OpenNMS Group, Inc.
 * OpenNMS(R) is Copyright (C) 1999-2022 The OpenNMS Group, Inc.
 *
 * OpenNMS(R) is a registered trademark of The OpenNMS Group, Inc.
 *
 * OpenNMS(R) is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as published
 * by the Free Software Foundation, either version 3 of the License,
 * or (at your option) any later version.
 *
 * OpenNMS(R) is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with OpenNMS(R).  If not, see:
 *      http://www.gnu.org/licenses/
 *
 * For more information contact:
 *     OpenNMS(R) Licensing <license@opennms.org>
 *     http://www.opennms.org/
 *     http://www.opennms.com/
 *******************************************************************************/
syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "tag.proto";

package opennms.inventory;
option java_multiple_files = true;
option java_package = "org.opennms.horizon.inventory.dto";

message PassiveDiscoveryDTO {
  int64 id = 1;
  string name = 2;
  string location_id = 3;
  bool toggle = 4;
  repeated int32 ports = 5;
  repeated string communities = 6;
  int64 create_time_msec = 7;
}

message PassiveDiscoveryListDTO {
  repeated PassiveDiscoveryDTO discoveries = 1;
}

message PassiveDiscoveryUpsertDTO {
  optional int64 id = 1;
  string name = 2;
  string location_id = 3;
  repeated int32 ports = 4;
  repeated string communities = 5;
  repeated opennms.inventory.TagCreateDTO tags = 6;
}

message PassiveDiscoveryToggleDTO {
  int64 id = 1;
  bool toggle = 2;
}

service PassiveDiscoveryService {
  rpc upsertDiscovery(PassiveDiscoveryUpsertDTO) returns (PassiveDiscoveryDTO) {};
  rpc listAllDiscoveries(google.protobuf.Empty) returns (PassiveDiscoveryListDTO) {};
  rpc toggleDiscovery(PassiveDiscoveryToggleDTO) returns (PassiveDiscoveryDTO) {};
  rpc deleteDiscovery(google.protobuf.Int64Value) returns(google.protobuf.BoolValue) {};
}
